# clipline-cloud

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  clipline-cloud-design.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
apps/clipline-cloud-server/: Cargo.toml
apps/clipline-cloud-server/src/: admin.rs  auth.rs  clips.rs  config.rs  error.rs  health.rs  logging.rs  mail.rs  main.rs  media.rs  operator.rs  steamgriddb.rs  uploads.rs  validation.rs
apps/clipline-cloud-web/: .gitignore  package-lock.json  package.json
apps/clipline-cloud-web/scripts/: build.mjs  check-dist.mjs
apps/clipline-cloud-web/src/: app.js  index.html  main.js  player-core.js  preview.html  styles.css  ui.css
apps/clipline-cloud-web/src/components/: BulkBar.js  ClipCard.js  Comments.js  ConfirmDialog.js  EmptyState.js  HoverPreview.js  Player.js  Popover.js  StatCard.js  TabBar.js  ToastHost.js  TopBar.js  UserAvatar.js
apps/clipline-cloud-web/src/css/: base.css  components.css  layout.css  tokens.css
apps/clipline-cloud-web/src/js/: app.js  router.js  shell.js  state.js  util.js
apps/clipline-cloud-web/src/js/components/: card.js
apps/clipline-cloud-web/src/js/views/: admin.js  library.js  login.js  public.js  watch.js
apps/clipline-cloud-web/src/lib/: api.js  format.js  icon-paths.js  icons.js  media.js  preview-guard.js  router.js  routes.js  store.js  use-api-resource.js
apps/clipline-cloud-web/src/pages/: about.js  account.js  admin.js  feed.js  games.js  library.js  login.js  profile.js  user.js  watch.js
apps/clipline-cloud-web/src/pages/admin/: categories.js  jobs.js  overview.js  settings.js  users.js
apps/clipline-cloud-web/tests/: admin-categories.test.mjs  admin-overview.test.mjs  admin-users.test.mjs  admin.test.mjs  api.test.mjs  bulk-bar.test.mjs  clip-card.test.mjs  comments.test.mjs  feed.test.mjs  format.test.mjs  library-visibility.test.mjs  library.test.mjs  login.test.mjs  media.test.mjs  player.test.mjs  preview-guard.test.mjs  routes-public.test.mjs  routes.test.mjs  shell.test.mjs  tab-bar.test.mjs  topbar-search.test.mjs  ui-css.test.mjs  user-avatar.test.mjs  watch.test.mjs
crates/clipline-cloud-api/: Cargo.toml
crates/clipline-cloud-api-types/: Cargo.toml
crates/clipline-cloud-api-types/src/: lib.rs
crates/clipline-cloud-api/src/: lib.rs
crates/clipline-cloud-core/: Cargo.toml
crates/clipline-cloud-core/src/: jobs.rs  lib.rs  media_processing.rs
crates/clipline-cloud-db/: Cargo.toml
crates/clipline-cloud-db/migrations/postgres/: 202606160001_initial_schema.sql  202606160002_reset_password_tokens.sql  202606160004_upload_failure_details.sql  202606190001_instance_settings_and_user_quotas.sql  202606190003_profiles_comments_views.sql  202606190004_smtp_invites.sql  202606210001_invitation_tokens.sql  202606260001_invitation_claim_tokens.sql  202607040001_default_user_storage_quota.sql  202607100001_active_job_uniqueness.sql  202607130001_game_category_overrides.sql  202607130002_game_category_artwork.sql  202607150001_game_categories.sql  202607160001_game_category_artwork_slots.sql
crates/clipline-cloud-db/migrations/sqlite/: 202606160001_initial_schema.sql  202606160002_reset_password_tokens.sql  202606160003_clip_library_indexes.sql  202606160004_upload_failure_details.sql  202606170001_advanced_library_indexes.sql  202606190001_instance_settings_and_user_quotas.sql  202606190002_clip_descriptions.sql  202606190003_profiles_comments_views.sql  202606190004_smtp_invites.sql  202606210001_invitation_tokens.sql  202606260001_invitation_claim_tokens.sql  202606260002_comment_replies.sql  202607040001_default_user_storage_quota.sql  202607130001_game_category_overrides.sql  202607130002_game_category_artwork.sql  202607150001_game_categories.sql  202607160001_game_category_artwork_slots.sql
crates/clipline-cloud-db/src/: lib.rs  models.rs  repositories.rs
crates/clipline-cloud-db/src/repositories/: transactions.rs
crates/clipline-cloud-storage/: Cargo.toml
crates/clipline-cloud-storage/src/: lib.rs
deploy/compose/: Caddyfile  docker-compose.caddy.yml  docker-compose.minio.yml  docker-compose.postgres.yml  docker-compose.s3.yml  docker-compose.standalone.yml  docker-compose.yml  smoke.sh  standalone.env.example
docs/: 00-overview-and-architecture.md  01-project-scaffolding-and-config.md  02-database-and-migrations.md  03-storage-abstraction.md  04-authentication-users-and-first-run-admin.md  05-upload-protocol.md  06-clip-lifecycle-and-jobs.md  07-clips-api-and-library-queries.md  08-media-serving-and-public-sharing.md  09-web-frontend.md  10-desktop-app-integration.md  11-deployment-operations-and-hardening.md  12-phase2-processing-and-reliability.md  13-phase3-admin-and-library-polish.md  14-phase4-optional-scale.md  README.md
docs/cloud/: deployment-guide.md  deployment-operations.md  railway-r2.md  release-process.md
docs/superpowers/plans/: 2026-06-17-youtube-web-redesign.md  2026-07-03-web-ui-redesign.md  2026-07-04-feed-hero-side-list.md  2026-07-10-watch-author-row.md  2026-07-15-game-category-management.md
docs/superpowers/specs/: 2026-06-17-youtube-web-redesign-design.md  2026-07-03-web-ui-redesign-design.md  2026-07-04-feed-hero-side-list-design.md  2026-07-04-widescreen-layout-design.md  2026-07-10-watch-author-row-design.md  2026-07-15-game-category-management-design.md
