[workspace]
members = [
  "apps/clipline-cloud-server",
  "crates/clipline-cloud-api",
  "crates/clipline-cloud-api-types",
  "crates/clipline-cloud-core",
  "crates/clipline-cloud-db",
  "crates/clipline-cloud-storage",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/dain98/clipline-cloud"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
aws-config = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cookie = "0.18"
hmac = "0.12"
http = "1"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
libc = "0.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate", "macros", "chrono", "json"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["catch-panic", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = "1"
url = "2"
