[package]
name = "clipline-cloud-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
bytes.workspace = true
clipline-cloud-db = { path = "../clipline-cloud-db" }
clipline-cloud-storage = { path = "../clipline-cloud-storage" }
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
