[package]
name = "clipline-cloud-core"
version = "1.2.35"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
bytes.workspace = true
clipline-cloud-db = { path = "../clipline-cloud-db" }
clipline-cloud-storage = { path = "../clipline-cloud-storage" }
libc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
