[package]
name = "clipline-cloud-db"
version = "1.2.25"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile.workspace = true
